components/rag/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rag
  labels:
    app: rag
    app.kubernetes.io/component: rag
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: rag
    app.kubernetes.io/part-of: sasya-arogya
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rag
    weight: 100
  wildcardPolicy: None
